curl command fix

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,8 +32,8 @@ jobs:
           publish_dir: ./public
 
       - name: Purge CloudFlare
-        run: 'curl -X POST "https://api.cloudflare.com/client/v4/zones/c02027ef35daf76a6910c5682929e7d4/purge_cache" \
-            -H "X-Auth-Email: ${{ secrets.CLOUDFLARE_EMAIL }}" \
-            -H "X-Auth-Key: ${{ secrets.CLOUDFLARE_TOKEN }}" \
-            -H "Content-Type: application/json" \
+        run: 'curl -X POST "https://api.cloudflare.com/client/v4/zones/c02027ef35daf76a6910c5682929e7d4/purge_cache"
+            -H "X-Auth-Email: ${{ secrets.CLOUDFLARE_EMAIL }}"
+            -H "X-Auth-Key: ${{ secrets.CLOUDFLARE_TOKEN }}"
+            -H "Content-Type: application/json"
             --data ''{"purge_everything":true}\'''
