--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -32,9 +32,11 @@ jobs:
           publish_dir: ./public
           cname: ghp.avci.me
 
-      - name: Purge CloudFlare
-        run: 'curl -X POST "https://api.cloudflare.com/client/v4/zones/c02027ef35daf76a6910c5682929e7d4/purge_cache"
-            -H "X-Auth-Email: ${{ secrets.CLOUDFLARE_EMAIL }}"
-            -H "X-Auth-Key: ${{ secrets.CLOUDFLARE_TOKEN }}"
-            -H "Content-Type: application/json"
-            --data ''{"purge_everything":true}\'''
+      - name: Purge Cloudflare Cache
+        env:
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          chmod +x ./purge_cloudflare_cache.sh
+          ./purge_cloudflare_cache.sh
