--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -38,5 +38,5 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          chmod +x ./purge_cloudflare_cache.sh
-          ./purge_cloudflare_cache.sh
+          chmod +x ./.github/purge_cloudflare_cache.sh
+          ./.github/purge_cloudflare_cache.sh
